# project-icarus

./: .gitignore  =3.0  README.md  TODO.md  debug_guidance.py  era5_download.py  pyproject.toml  requirements.txt  setup_cython.py  verify_unintercepted.py  verify_unintercepted_chunked.py
benchmarks/: benchmark_propagation.py
notebooks/: TestExample.ipynb  engagement_sweep.ipynb  interactive_dashboard.ipynb  solution.h5  solution.xdmf  solution_f1.0.h5  solution_f1.0.xdmf  stl_aero_generation.ipynb
project_icarus/: constraints.py  gpu_utils.py
reference/: additional-vehicle-specs.md  improved-mathematical-analysis.md  israeli_missile_defense_system.mermaid.md  locations.py  locations.yml  prepare_era5.py  project-icarus-future-upgrades.md
scripts/: generate_stl_aero.py  normalize_stl_library.py
src/: constraints.py
tests/: test_aero_cfd.py  test_aero_surrogate_cfd.py  test_c2.py  test_dymos.py  test_eom.py  test_era5.py  test_error_logging.py  test_guidance.py  test_guidance_backends.py  test_icbm_guidance.py  test_integration_events.py  test_integrator_safety.py  test_layers.py  test_optimization.py  test_persistence.py  test_phase7_closed_loop.py  test_physical_invariants.py  test_reporting.py  test_sarmat_physics_validation.py  test_sarmat_trajectory.py  test_seeker.py  test_sensor_fusion_validation.py  test_sensors.py  test_separation.py  test_sim.py  test_stl_loader.py  test_surface_elevation.py  test_surrogate.py  test_target_robustness.py  test_terminal_guidance_opt.py  test_threat_realism.py  test_tracker_autopilot.py  test_vehicle_geometry.py
(+112 files in other folders)
