[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-icarus"
version = "0.1.0"
description = "Missile defense simulation framework"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "h5py>=3.9",
    "openmdao>=3.28",
    "dymos>=1.15",
    "matplotlib>=3.7",
    "pyvista>=0.43",
    "ipywidgets>=8.1",
    "pandas>=2.2",
    "Cython>=3.0",
    "rasterio>=1.3",
]

[project.optional-dependencies]
nrlmsise00 = ["nrlmsise00"]
cfd = ["dolfinx>=0.9"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --ignore=tests/test_dymos.py"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
